# EdgeDetection

./: .gitignore  CMakeLists.txt  Debug.h  EdgeDetection.kdev4  ImageProcessing.cpp  ImageProcessing.h  README.md  main.cpp
.kdev4/: EdgeDetection.kdev4
_old_opencv_version/: ImageProcessing.cpp  ImageProcessing.h  README.md  main.cpp
lib/: CMakeLists.txt
lib/core/: core.h
lib/core/include/: allocator.h  array2d.h  assert.h  def.h  log.h  sliding_window_view.h
lib/core/src/: log.cpp
lib/image/: image.h
lib/image/include/: convolve.h  dft.h  edge_detection.h  image_converter.h  image_reader.h  image_writer.h  kernel.h  pixel.h  stb.h
lib/image/src/: stb.cpp
test/: CMakeLists.txt  test_runner.cpp
test/core/: array2d_test.cpp  sliding_window_view_test.cpp
test/image/: convolve_test.cpp  dft_test.cpp  edge_detection_test.cpp  image_converter_test.cpp  image_reader_test.cpp
